feat: implement build swagger for uget all user endpoint
