# backend/openapi/paths.yaml
@@ -167,6 +167,53 @@ paths:
       summary: Get all user into the system
       description: Get all user into the system
       operationId: getAllUser
+      security:
+        - BearerAuth: []
+      responses:
+        '200':
+          description: A list of users
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  statusCode:
+                    type: integer
+                    example: 200
+                  message:
+                    type: string
+                    example: 'Get all user successfully'
+                  data:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/ProfileSchema'
+                  dateTime:
+                    type: string
+                    format: date-time
+                    example: '2024-02-22T00:00:00.000Z'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  statusCode:
+                    type: integer
+                    example: 500
+                  message:
+                    example: Internal server error
+                  dateTime:
+                    type: string
+                    format: date-time
+                    example: '2024-02-22T00:00:00.000Z'
+  /auth/pagination-user:
+    get:
+      tags:
+        - auth
+      summary: Get all user pagination into the system
+      description: Get all user pagination into the system
+      operationId: getAllUserPagination
       parameters:
         - name: page
           in: query
