# backend/src/controllers/auth.controllers.ts
@@ -12,6 +12,10 @@ const authController = {
   callback: (provider: AuthProvider) => async (req: Request<ParamsDictionary, any, any>, res: Response, next: NextFunction) => {
     await oauthService.callback(provider, req, res)
   },
+  getAllUserPagination: async (req: Request<ParamsDictionary, any, ParsedGetAllUserUrlQuery>, res: Response, next: NextFunction) => {
+    const result = await authService.getAllUserPagination(req.query)
+    return sendResponse.success(res, result, RESULT_RESPONSE_MESSAGES.USER_SUCCESS.GET_ALL_USER)
+  },
   getAllUser: async (req: Request<ParamsDictionary, any, any>, res: Response, next: NextFunction) => {
     const result = await authService.getAllUser()
     return sendResponse.success(res, result, RESULT_RESPONSE_MESSAGES.USER_SUCCESS.GET_ALL_USER)
